1.x cleanup actions