@@ -13,7 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package de.kosit.validationtool.impl.xml;
 
 import java.io.Reader;
@@ -24,8 +23,6 @@ import java.nio.charset.StandardCharsets;
 import javax.xml.XMLConstants;
 import javax.xml.transform.Result;
 import javax.xml.transform.TransformerException;
-
-import lombok.SneakyThrows;
 
 import net.sf.saxon.Configuration;
 import net.sf.saxon.expr.XPathContext;
@@ -45,7 +42,7 @@ public class ProcessorProvider {
 
     private static class SecureUriResolver implements CollectionFinder, OutputURIResolver, UnparsedTextURIResolver {
 
-        public static final String MESSAGE = "Configuration error. Resolving ist not allowed";
+        public static final String MESSAGE = "Configuration error. Resolving is not allowed";
 
         @Override
         public OutputURIResolver newInstance() {
@@ -81,9 +78,8 @@ public class ProcessorProvider {
 
     private static Processor processor;
 
-    @SneakyThrows
     private static String encode(final String input) {
-        return URLEncoder.encode(input, StandardCharsets.UTF_8.name());
+        return URLEncoder.encode(input, StandardCharsets.UTF_8);
     }
 
     public static Processor getProcessor() {
@@ -95,23 +91,26 @@ public class ProcessorProvider {
 
     private static Processor createProcessor() {
         final Processor processor = new Processor(false);
-        // verhindere global im Prinzip alle resolving strategien
+        // globally prevent essentially all resolving strategies
         final SecureUriResolver resolver = new SecureUriResolver();
         processor.getUnderlyingConfiguration().setCollectionFinder(resolver);
-        processor.getUnderlyingConfiguration().setOutputURIResolver(resolver);// NOSONAR
+        // NOSONAR
+        processor.getUnderlyingConfiguration().setOutputURIResolver(resolver);
         processor.getUnderlyingConfiguration().setUnparsedTextURIResolver(resolver);
-
-        // grundsätzlich Feature-konfiguration:
+        // basic feature configuration:
         processor.setConfigurationProperty(Feature.DTD_VALIDATION, false);
         processor.setConfigurationProperty(Feature.ENTITY_RESOLVER_CLASS, "");
         processor.setConfigurationProperty(Feature.XINCLUDE, false);
         processor.setConfigurationProperty(Feature.ALLOW_EXTERNAL_FUNCTIONS, false);
-
-        // Konfiguration des zu verwendenden Parsers, wenn Saxon selbst einen erzeugen muss, bspw. beim XSL parsen
-        processor.setConfigurationProperty(FeatureKeys.XML_PARSER_FEATURE + encode(FEATURE_SECURE_PROCESSING), true); // NOSONAR
-        processor.setConfigurationProperty(FeatureKeys.XML_PARSER_FEATURE + encode(DISSALLOW_DOCTYPE_DECL_FEATURE), true);// NOSONAR
-        processor.setConfigurationProperty(FeatureKeys.XML_PARSER_FEATURE + encode(LOAD_EXTERNAL_DTD_FEATURE), false);// NOSONAR
-        processor.setConfigurationProperty(FeatureKeys.XML_PARSER_FEATURE + encode(XMLConstants.ACCESS_EXTERNAL_DTD), false);// NOSONAR
+        // configuration of the parser to use when Saxon itself has to create one, e.g. when parsing XSL
+        // NOSONAR
+        processor.setConfigurationProperty(FeatureKeys.XML_PARSER_FEATURE + encode(FEATURE_SECURE_PROCESSING), true);
+        // NOSONAR
+        processor.setConfigurationProperty(FeatureKeys.XML_PARSER_FEATURE + encode(DISSALLOW_DOCTYPE_DECL_FEATURE), true);
+        // NOSONAR
+        processor.setConfigurationProperty(FeatureKeys.XML_PARSER_FEATURE + encode(LOAD_EXTERNAL_DTD_FEATURE), false);
+        // NOSONAR
+        processor.setConfigurationProperty(FeatureKeys.XML_PARSER_FEATURE + encode(XMLConstants.ACCESS_EXTERNAL_DTD), false);
         return processor;
     }
 }
